--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>木桶布局</title>
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
         .img-preview {
             width: 960px;
@@ -111,7 +111,7 @@
             color = Math.random().toString(16).substring(2, 8)
             width = Math.floor(Math.random() * 100 + 50)
             height = Math.floor(Math.random() * 30 + 50)
-            urls.push("http://placehold.it/" + width + "x" + height + "/" + color + "/fff")
+            urls.push("//placehold.it/" + width + "x" + height + "/" + color + "/fff")
         }
         return urls
        
